testing/tests/ui/assign-to-askama.stderr
error: cannot use `__askama_var` as a name: it is reserved for `askama`
 --> <source attribute>:1:7
       "__askama_var %}"
 --> tests/ui/assign-to-askama.rs:4:21
  |
4 | #[template(source = r#"{% let __askama_var %}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use `__askama_var` as a name: it is reserved for `askama`
 --> <source attribute>:1:7
       "__askama_var = \"var\" %}"
 --> tests/ui/assign-to-askama.rs:8:21
  |
8 | #[template(source = r#"{% let __askama_var = "var" %}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use `abstract` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "abstract %}"
  --> tests/ui/assign-to-askama.rs:19:19
   |
19 | test_kw!(Abstract "{% let abstract %}");
   |                   ^^^^^^^^^^^^^^^^^^^^

error: cannot use `as` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "as %}"
  --> tests/ui/assign-to-askama.rs:20:13
   |
20 | test_kw!(As "{% let as %}");
   |             ^^^^^^^^^^^^^^

error: cannot use `async` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "async %}"
  --> tests/ui/assign-to-askama.rs:21:16
   |
21 | test_kw!(Async "{% let async %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `await` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "await %}"
  --> tests/ui/assign-to-askama.rs:22:16
   |
22 | test_kw!(Await "{% let await %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `become` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "become %}"
  --> tests/ui/assign-to-askama.rs:23:17
   |
23 | test_kw!(Become "{% let become %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: cannot use `box` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "box %}"
  --> tests/ui/assign-to-askama.rs:24:14
   |
24 | test_kw!(Box "{% let box %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `break` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "break %}"
  --> tests/ui/assign-to-askama.rs:25:16
   |
25 | test_kw!(Break "{% let break %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `const` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "const %}"
  --> tests/ui/assign-to-askama.rs:26:16
   |
26 | test_kw!(Const "{% let const %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `continue` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "continue %}"
  --> tests/ui/assign-to-askama.rs:27:19
   |
27 | test_kw!(Continue "{% let continue %}");
   |                   ^^^^^^^^^^^^^^^^^^^^

error: cannot use `crate` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "crate %}"
  --> tests/ui/assign-to-askama.rs:28:16
   |
28 | test_kw!(Crate "{% let crate %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `do` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "do %}"
  --> tests/ui/assign-to-askama.rs:29:13
   |
29 | test_kw!(Do "{% let do %}");
   |             ^^^^^^^^^^^^^^

error: cannot use `dyn` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "dyn %}"
  --> tests/ui/assign-to-askama.rs:30:14
   |
30 | test_kw!(Dyn "{% let dyn %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `else` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "else %}"
  --> tests/ui/assign-to-askama.rs:31:15
   |
31 | test_kw!(Else "{% let else %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `enum` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "enum %}"
  --> tests/ui/assign-to-askama.rs:32:15
   |
32 | test_kw!(Enum "{% let enum %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `extern` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "extern %}"
  --> tests/ui/assign-to-askama.rs:33:17
   |
33 | test_kw!(Extern "{% let extern %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: when you forward-define a variable, you cannot use a literal in place of a variable name
 --> <source attribute>:1:2
       " let false %}"
  --> tests/ui/assign-to-askama.rs:34:16
   |
34 | test_kw!(False "{% let false %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `final` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "final %}"
  --> tests/ui/assign-to-askama.rs:35:16
   |
35 | test_kw!(Final "{% let final %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `fn` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "fn %}"
  --> tests/ui/assign-to-askama.rs:36:13
   |
36 | test_kw!(Fn "{% let fn %}");
   |             ^^^^^^^^^^^^^^

error: cannot use `for` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "for %}"
  --> tests/ui/assign-to-askama.rs:37:14
   |
37 | test_kw!(For "{% let for %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `gen` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "gen %}"
  --> tests/ui/assign-to-askama.rs:38:14
   |
38 | test_kw!(Gen "{% let gen %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `if` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "if %}"
  --> tests/ui/assign-to-askama.rs:39:13
   |
39 | test_kw!(If "{% let if %}");
   |             ^^^^^^^^^^^^^^

error: cannot use `impl` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "impl %}"
  --> tests/ui/assign-to-askama.rs:40:15
   |
40 | test_kw!(Impl "{% let impl %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `in` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "in %}"
  --> tests/ui/assign-to-askama.rs:41:13
   |
41 | test_kw!(In "{% let in %}");
   |             ^^^^^^^^^^^^^^

error: cannot use `let` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "let %}"
  --> tests/ui/assign-to-askama.rs:42:14
   |
42 | test_kw!(Let "{% let let %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `loop` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "loop %}"
  --> tests/ui/assign-to-askama.rs:43:15
   |
43 | test_kw!(Loop "{% let loop %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `macro` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "macro %}"
  --> tests/ui/assign-to-askama.rs:44:16
   |
44 | test_kw!(Macro "{% let macro %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `match` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "match %}"
  --> tests/ui/assign-to-askama.rs:45:16
   |
45 | test_kw!(Match "{% let match %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `mod` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "mod %}"
  --> tests/ui/assign-to-askama.rs:46:14
   |
46 | test_kw!(Mod "{% let mod %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `move` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "move %}"
  --> tests/ui/assign-to-askama.rs:47:15
   |
47 | test_kw!(Move "{% let move %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `mut` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "mut %}"
  --> tests/ui/assign-to-askama.rs:48:14
   |
48 | test_kw!(Mut "{% let mut %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `override` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "override %}"
  --> tests/ui/assign-to-askama.rs:49:19
   |
49 | test_kw!(Override "{% let override %}");
   |                   ^^^^^^^^^^^^^^^^^^^^

error: cannot use `priv` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "priv %}"
  --> tests/ui/assign-to-askama.rs:50:15
   |
50 | test_kw!(Priv "{% let priv %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `pub` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "pub %}"
  --> tests/ui/assign-to-askama.rs:51:14
   |
51 | test_kw!(Pub "{% let pub %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `ref` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "ref %}"
  --> tests/ui/assign-to-askama.rs:52:14
   |
52 | test_kw!(Ref "{% let ref %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `return` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "return %}"
  --> tests/ui/assign-to-askama.rs:53:17
   |
53 | test_kw!(Return "{% let return %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: cannot use `self` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "self %}"
  --> tests/ui/assign-to-askama.rs:54:20
   |
54 | test_kw!(LowerSelf "{% let self %}");
   |                    ^^^^^^^^^^^^^^^^

error: when you forward-define a variable, you cannot use a path or enum variant in place of a variable name
 --> <source attribute>:1:2
       " let Self %}"
  --> tests/ui/assign-to-askama.rs:55:20
   |
55 | test_kw!(UpperSelf "{% let Self %}");
   |                    ^^^^^^^^^^^^^^^^

error: cannot use `static` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "static %}"
  --> tests/ui/assign-to-askama.rs:56:17
   |
56 | test_kw!(Static "{% let static %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: cannot use `struct` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "struct %}"
  --> tests/ui/assign-to-askama.rs:57:17
   |
57 | test_kw!(Struct "{% let struct %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: cannot use `super` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "super %}"
  --> tests/ui/assign-to-askama.rs:58:16
   |
58 | test_kw!(Super "{% let super %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `trait` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "trait %}"
  --> tests/ui/assign-to-askama.rs:59:16
   |
59 | test_kw!(Trait "{% let trait %}");
   |                ^^^^^^^^^^^^^^^^^

error: when you forward-define a variable, you cannot use a literal in place of a variable name
 --> <source attribute>:1:2
       " let true %}"
  --> tests/ui/assign-to-askama.rs:60:15
   |
60 | test_kw!(True "{% let true %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `try` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "try %}"
  --> tests/ui/assign-to-askama.rs:61:14
   |
61 | test_kw!(Try "{% let try %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `type` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "type %}"
  --> tests/ui/assign-to-askama.rs:62:15
   |
62 | test_kw!(Type "{% let type %}");
   |               ^^^^^^^^^^^^^^^^

error: cannot use `typeof` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "typeof %}"
  --> tests/ui/assign-to-askama.rs:63:17
   |
63 | test_kw!(Typeof "{% let typeof %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: cannot use `union` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "union %}"
  --> tests/ui/assign-to-askama.rs:64:16
   |
64 | test_kw!(Union "{% let union %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `unsafe` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "unsafe %}"
  --> tests/ui/assign-to-askama.rs:65:17
   |
65 | test_kw!(Unsafe "{% let unsafe %}");
   |                 ^^^^^^^^^^^^^^^^^^

error: cannot use `unsized` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "unsized %}"
  --> tests/ui/assign-to-askama.rs:66:18
   |
66 | test_kw!(Unsized "{% let unsized %}");
   |                  ^^^^^^^^^^^^^^^^^^^

error: cannot use `use` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "use %}"
  --> tests/ui/assign-to-askama.rs:67:14
   |
67 | test_kw!(Use "{% let use %}");
   |              ^^^^^^^^^^^^^^^

error: cannot use `virtual` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "virtual %}"
  --> tests/ui/assign-to-askama.rs:68:18
   |
68 | test_kw!(Virtual "{% let virtual %}");
   |                  ^^^^^^^^^^^^^^^^^^^

error: cannot use `where` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "where %}"
  --> tests/ui/assign-to-askama.rs:69:16
   |
69 | test_kw!(Where "{% let where %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `while` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "while %}"
  --> tests/ui/assign-to-askama.rs:70:16
   |
70 | test_kw!(While "{% let while %}");
   |                ^^^^^^^^^^^^^^^^^

error: cannot use `yield` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "yield %}"
  --> tests/ui/assign-to-askama.rs:71:16
   |
71 | test_kw!(Yield "{% let yield %}");
   |                ^^^^^^^^^^^^^^^^^
